Rename of api field and slightly better checking way of password
